[gd_scene load_steps=5 format=3 uid="uid://hk72huonbcvg"]

[ext_resource type="Script" uid="uid://brk08knhdg4pq" path="res://objects/enemy_follow.gd" id="1_r1ahl"]
[ext_resource type="PackedScene" uid="uid://cgue0yfnhvwv7" path="res://models/Demon.glb" id="2_r1ahl"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="3_5bb5d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iix87"]
radius = 0.75

[node name="enemy-follow" type="Area3D"]
script = ExtResource("1_r1ahl")

[node name="Root Scene" parent="." instance=ExtResource("2_r1ahl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5809774, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("SphereShape3D_iix87")

[node name="RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 5)

[node name="MuzzleA" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.0141244, -0.6689386, 0.71034133)
sprite_frames = ExtResource("3_5bb5d")
frame = 2

[node name="MuzzleB" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1.1172576, -0.866679, 0.61337125)
sprite_frames = ExtResource("3_5bb5d")
frame = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
